# university

./: .gitignore
asmm/: main.c  main.s  Отчёт 1.odt
asmm/lab1/: main2.s  Отчёт 1.odt
asmm/lab2/: .~lock.АСМиМ Отчёт 2.odt#  main.c  main.py  main1.c  main1.s  main10.c  main100.c  main100.s  main101.c  main102.c  main103.c  main104.c  main105.c  main106.c  main107.c  main108.c  main109.c  main11.c  main110.c  main111.c  main112.c  main113.c  main114.c  main115.c  main116.c  main117.c  main118.c  main119.c  main12.c  main120.c  main121.c  main122.c  main123.c  main124.c  main125.c  main126.c  main127.c  main128.c  main129.c  main13.c  (+225 more)
asmm/lab3/: cycle.ods  main.cpp  main.s  out.csv  out.ods  АСМиМ Отчёт 3.odt
asmm/lab4/: АСМиМ Отчёт 4.docx
bd/: 15206_Lukin_Bogdan.txt  bdlab1.accdb  final.txt  l1.odb
cpp/lab0a/: main.cpp
cpp/lab0b/: main.cpp  sort_strings.cpp  sort_strings.h  test.sh
cpp/lab1/: trit.h  tritset.cpp
cpp/lab1/gtests/: CMakeLists.txt  tritset_gtests.cpp
cpp/lab2/Surfaces/: Cylinder.cpp  Torus.cpp
cpp/lab2/base/: MainRoutines.cpp  main.cpp
cpp/lab2/include/: Searcher.h  Torus.h  (+2 more)
cpp/lab3/: CSVParser.h  TupleUtils.h  main.cpp  test.csv  test2Fail.csv  testFail.csv
cppExtended/: plan.txt  test2.cpp
cppExtended/sem1/: test.cpp
cppExtended/sem2/: test.cpp
cppExtended/sem3/: 5min.cpp
epmm/lab2/: .fuse_hidden0000a4a800000001  .~lock.Отчёт 2.odt#  main.cpp  main.s  ЭПСМиМ Отчёт 2.odt
epmm/lab3/: .~lock.out.ods#  .~lock.ЭПСМиМ Отчёт 3.odt#  barier.h  barrier.cpp  barrier.h  main.cpp  main.s  out.csv  out.ods  ЭПСМиМ Отчёт 3.odt
epmm/lab5/: make_png500.plt  poi2d.c  poi2da.c  poi2di.c
java/previous/: labs.properties  labs.xml
oop/: info.txt
oop/lab0a/: Makefile
oop/lab0b/: Makefile  main.cpp  sort_strings.cpp  sort_strings.h
oop/lab1/: CMakeLists.txt  Makefile  README.md  main.cpp  trit.cpp  trit.h  trit_base.h  tritset.cpp  tritset.h  tritset_gtests.cpp
oop/lab1/gtests/: CMakeLists.txt  trit_gtests.cpp  tritset_gtests.cpp
oop/lab2/: CMakeLists.txt  Searcher.h  Surface.h  test.cpp  test.txt
oop/lab2/Surfaces/: CMakeLists.txt  Cylinder.cpp  Plane.cpp  Plane.h  Torus.cpp  TwoDimSurface.cpp  TwoDimSurface.h  WordSurface.cpp  a.out
oop/lab2/base/: MainRoutines.cpp  main.cpp
oop/lab2/include/: Cylinder.h  MainRoutines.h  Plane.h  Searcher.h  Surface.h  Torus.h  TwoDimSurface.h  WordSurface.h
oop/lab3/: CSVParser.h  TupleUtil.h  TupleUtils.h  main.cpp  test2.csv
os/: info
os/task1/: main.c
os/task10/: main.c
os/task11/: main.c
os/task16/: main.c
os/task17/: main.c
os/task2/: main.c
os/task21/: main.c
os/task22/: main.c
os/task25/: main.c
os/task26/: main.c  toupper.c
os/task27/: main.c
os/task28/: main.c
os/task3/: main.c
os/task30/: receiver.c  sender.c
os/task31/: msg_const.h  receiver.c  sender.c
os/task32/: msg_const.h  sender.c
os/task33/: main.c
os/task34/: receiver.c  sender.c
os/task4/: main.c
os/task5/: main.c
os/task6/: main.c
os/task7/: main.c
os/task8/: main.c
os/task9/: main.c
os2/lab01/: main.c
os2/lab02/: main.c
os2/lab03/: main.c
os2/lab04/: main.c
os2/lab05/: main.c
os2/lab06/: main.c
os2/lab07/: main.c
os2/lab08/: main.c
os2/lab09/: main.c  main2.c
os2/lab10/: main.c  not_portable.c
os2/lab12/: main.c
os2/lab13/: main.c
os2/lab15/: .fuse_hidden0001e5db0000004a  main.c
os2/lab16/: main.c
os2/lab17/: main.c
os2/lab25/: main.c
os2/lab29/: 29(2).c  29.c  CMakeLists.txt  Cache.h  Proxy.h  main.cpp
os2/lab30/: CMakeLists.txt  main.c  second_proxy.c
parallel/: CMakeLists.txt  test.cpp
parallel/lab1/: 1.cpp  2.cpp  Matrix.h  MatrixMPI.h  Vector.h  first.cpp  graph.ods  info.txt  main.cpp  second.cpp  slau_solve.cpp  slau_solve.h  Отчёт 1.odt  Отчёт.odt
parallel/lab2/: Matrix.h  Vector.h  all.cpp  for.cpp  graphs.ods  main.cpp  slau_solve.cpp  slau_solve.h  Отчёт 2.odt  Отчёт.odt
parallel/lab3/: CMakeLists.txt  graph.csv  graph.ods  main.cpp  Отчёт 3.odt
parallel/lab4/: CMakeLists.txt  graph.csv  graph.ods  main.cpp  Отчёт 4.odt
parallel/lab5/: CMakeLists.txt  main.cpp  no_bal.cpp  test.c  test.cpp  with_balance.c  with_balance.cpp  without_balance.cpp  Отчёт 5.odt
psov/GraphicsEngine/: CMakeLists.txt
psov/GraphicsEngine/Sources/: main.cpp
psov/GraphicsEngine/Sources/GraphicsEngine/: Camera.h  Component.h  GraphicsEngineFabric.cpp  Light.h  LightDirect.h  LightPoint.h  LightSpot.h  Object.h  Scene.cpp  Transform.cpp  Vector3.h
psov/GraphicsEngine/Sources/GraphicsEngine/GraphicsApi/: MaterialImpl.h
psov/GraphicsEngine/Sources/GraphicsEngine/GraphicsApi/OpenGL20/: GL20.h  GL20GUI.cpp  GL20GraphicsEngine.cpp  GL20Material.cpp  GL20Material.h  GL20Mesh.cpp  GL20Texture2D.cpp
psov/GraphicsEngine/Sources/GraphicsEngine/Materials/: Material.cpp  Material.h  MaterialCubeSphere.cpp  MaterialCubeSphere.h  MaterialCylinderTwist.cpp  MaterialCylinderTwist.h  MaterialDiffuse.cpp  MaterialEarth.cpp  MaterialEarth.h  MaterialEarthLight.cpp  MaterialEarthLight.h  MaterialLight.cpp  MaterialLight.h  MaterialRoad.cpp  MaterialSand.cpp  MaterialUnlit.cpp  MaterialUnlit.h  Stageable.h
psov/GraphicsEngine/Sources/GraphicsEngine/Meshes/: MeshCube.cpp  MeshCubeSphere.h  MeshObjFile.cpp  MeshObjFile.h  MeshSphere.cpp
psov/GraphicsEngine/Sources/GraphicsEngine/Objects/: CubeSphere.cpp  CubeSphere.h
psov/GraphicsEngine/Sources/GraphicsEngine/PlatformApi/: Platform.h
psov/GraphicsEngine/Sources/GraphicsEngine/Shaders/GL20/: ShaderDiffuse.fs  ShaderEarthLight.fs  ShaderEarthLight.vs  ShaderLight.fs  ShaderLight.vs  ShaderRoad.fs  ShaderRoad.vs  ShaderSand.fs  ShaderUnlit.vs  ShaderUnlitCubeSphere.vs  ShaderUnlitCylinderTwist.vs  ShaderUnlitNorm.vs
psov/GraphicsEngine/Sources/Tasks/: CameraController.h  ObjectRotator.h  Task01.h  Task02.h  Task04.h  Task05_01.h  Task05_02.h  Task05_03.h  Task06.h  Task08.h
psov/GraphicsEngine/qt57/: qt57.pro
psov/task1_gl/: CMakeLists.txt
psov/task1_gl/Sources/: main.cpp  stdafx.h
psov/task1_gl/build-qt57-Ubuntu12-Debug/: Makefile  qt57
psov/task1_gl/qt57/: qt57.pro
web/lab4/: Thumbs.db
(+233 files in other folders)
